--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@ body {
   font-size: 2rem;
 }
 
+.virus {
+  width: 40px;
+  height: 40px;
+}
+
 .app__dropdown {
   background-color: white;
 }
@@ -46,6 +51,11 @@ body {
 
 .app__right h3 {
   text-align: center !important;
+  color: #6a5d5d;
+}
+
+.app__graph {
+  flex-grow: 1;
 }
 
 .app__graphTitle {
@@ -53,13 +63,20 @@ body {
   margin-bottom: 20px;
 }
 
-.app__graph {
-  flex-grow: 1;
+.app__graphTitle .new {
+  width: 1.5rem;
+  height: 1.5rem;
 }
+
 
 .app__stats {
   display: flex;
   justify-content: space-between;
+}
+
+.world {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 @media screen and (max-width: 990px) {
