--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -4,6 +4,10 @@
   cursor: pointer;
 }
 
+.infoBox:hover {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
+}
+
 .infoBox:not(:last-child) {
   margin-right: 10px;
 
@@ -31,7 +35,29 @@
   border-color: #CC1034;
 }
 
+.infoBox--red:last-child {
+  border-color: #fb4443;
+}
+
 .infoBox__cases--green {
   color: #7dd71d !important;
 
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
+  margin-right: 5px;
+}
+
+.icon-1 {
+  color: #CC1034;
+}
+
+.icon-2 {
+  color: #7dd71d
+}
+
+.icon-3 {
+  color: #fb4443
 }
