--- a/src/Table.css
+++ b/src/Table.css
@@ -16,6 +16,12 @@
   ;
 }
 
+.table tr img {
+  width: 1.5rem;
+  height: auto;
+  margin-right: 0.5rem;
+}
+
 .table tr:nth-of-type(odd) {
   background-color: #f3f2f8;
 }
